--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
             margin: 1rem;
             height: 12vh;
         }
+
+        #output{
+            border: 1px solid black;
+            padding: 1rem;
+            margin: 1rem;;
+            height: 10vh;
+            max-width: 90%;
+            display: block;
+        }
     </style>
+
 </head>
 <body>
     <h1>translate into banana</h1>
@@ -21,6 +31,8 @@
     id="txt-input"
     placeholder="Put your sentece here,and you can convert it into your favourites minions language"></textarea>
     <button id="btn-translate">translate</button>
+    <div style="font-size: larger;">output will come here👇</div>
+    <div id="output">hello</div>
     <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
