--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>banana speak</title>
     <style>
-        textarea{
-            max-width: 90%;
-            display: block;
-            padding: 1rem;
+        #txt-input {
             margin: 1rem;
-            height: 12vh;
+            padding: 2rem;
+            height: 10vh;
+            max-width: 80%;
+            display: block;
+            border: 1px solid ;
         }
+        
+      
 
         #output{
             border: 1px solid black;
@@ -29,10 +32,10 @@
     <h1>translate into banana</h1>
     <textarea  
     id="txt-input"
-    placeholder="Put your sentece here,and you can convert it into your favourites minions language"></textarea>
+     placeholder="Put your sentece here,and you can convert it into your favourites minions language"></textarea> 
     <button id="btn-translate">translate</button>
     <div style="font-size: larger;">output will come here👇</div>
-    <div id="output">hello</div>
+    <div id="output">Nman is super</div>
     <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
