--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             text-align: center;
             display: block;
             margin: 1rem auto;
+            cursor: pointer;
             padding: 0.8rem;
             background-color: grey;
            border-radius: 1rem;
